@@ -43,7 +43,7 @@ PowerBarColor["RAGE"] = { r = 1.00, g = 0.00, b = 0.00, fullPowerAnim=true }
 PowerBarColor["FOCUS"] = { r = 1.00, g = 0.50, b = 0.25, fullPowerAnim=true }
 PowerBarColor["ENERGY"] = { r = 1.00, g = 1.00, b = 0.00, fullPowerAnim=true }
 PowerBarColor["COMBO_POINTS"] = { r = 1.00, g = 0.96, b = 0.41 }
-PowerBarColor["RUNES"] = { r = 0.50, g = 0.50, b = 0.50 }
+PowerBarColor["RUNES"] = { r = 0.80, g = 0.10, b = 1.00 }
 PowerBarColor["RUNIC_POWER"] = { r = 0.00, g = 0.82, b = 1.00 }
 PowerBarColor["SOUL_SHARDS"] = { r = 0.50, g = 0.32, b = 0.55 }
 PowerBarColor["LUNAR_POWER"] = { r = 0.30, g = 0.52, b = 0.90, atlas="_Druid-LunarBar" }
